repaired and replaced JSON

--- a/Server/package.json
+++ b/Server/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.3.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^10.1.0"
   }
 }
